@@ -1,4 +1,4 @@
-cd C:\Users\kimyu\OneDrive\바탕 화면\DitaTeam\DITA_Java\Java_Prj\Java_Prj
-java --module-path "C:\Users\kimyu\Downloads\openjfx-22.0.2_windows-x64_bin-sdk\javafx-sdk-22.0.2\lib" --add-modules javafx.controls,javafx.fxml -cp "C:\Users\kimyu\OneDrive\바탕 화면\DitaTeam\DITA_Java\Java_Prj\ojdbc11.jar;bin" admin.Main
+cd C:\Users\718_05\Documents\GitHub\DITA_Java\Java_Prj\Java_Prj
+java --module-path "C:\Users\718_05\Documents\GitHub\DITA_Java\Java_Prj\ojdbc11.jar;bin" admin.Main
 
 pause
